# Linuxhello

./: .gitignore  CMakeLists.txt  README.md
_codeql_build_dir/: lh-enroll  lhd
_codeql_build_dir/tests/: test_challenge  test_crypto  test_storage
docs/: architecture.md  security-analysis.md  test-plan.md
pam.d/: linuxhello
src/biometric/: fprintd_client.c  fprintd_client.h  fprintd_stub.c  ir_face.cpp  ir_face.h
src/common/: linuxhello.h
src/crypto/: challenge.c  challenge.h  tpm_ops.c  tpm_ops.h
src/daemon/: lhd.c  lhd.h
src/enroll/: lh-enroll.c
src/pam/: pam_linuxhello.c
src/storage/: storage.c  storage.h
systemd/: linuxhello.service
tests/: CMakeLists.txt  test_challenge.c  test_crypto.c  test_storage.c
